# pyktest

./: .gitleaks.toml  .pre-commit-config.yaml  README.md  pyproject.toml
ktest/: _log.py  context.py  dracut.py  grub.py  grubby.py  make.py  task.py  tasks.py  util.py
ktest/connection/: base.py  ssh.py
tests/: __init__.py  conftest.py  sshd.py  test_context.py  test_ssh.py  test_task.py  test_util.py
tests/pyktest-ssh/: sshd_config
tests/pyktest-ssh/fake_keys/: id_rsa
tests/test-container/: Dockerfile  Makefile
tests/test-container/fake_keys/: id_rsa.pub
tests/test-vm/: create-vm.sh
tests/test-vm/kickstart/: almalinux9.ks
