[tool.poetry]
name = "ktest"
version = "0.1.0"
description = "pyktest is a Linux Kernel testing automation framework built as a Python package."
authors = ["Wander Lairson Costa <wander.lairson@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fabric = "^2.7.1"
gitpython = "^3.1.29"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
podman = "^4.2.0"
black = "^22.10.0"
flake8 = "^5.0.4"
pyright = "^1.1.274"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
